--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "angular2-flash-messages": "^3.0.1",
     "bulma": "^0.9.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
